@@ -1,0 +1,5 @@
+<metadata>
+ <version>1</version>
+ <dependencies>
+ </dependencies>
+</metadata>
