@@ -1,6 +1,10 @@
+from collective.elasticsearch.interfaces import IElasticSettings
+from zope.component import getUtility
+from plone.registry.interfaces import IRegistry
+
 try:
     from plone.uuid.interfaces import IUUID
-except:
+except ImportError:
     def IUUID(obj, default=None):
         return default
 
@@ -10,3 +14,7 @@ def getUID(obj):
     if not value and hasattr(obj, 'UID'):
         value = obj.UID()
     return value
+
+
+def getESOnlyIndexes():
+    return getUtility(IRegistry).forInterface(IElasticSettings).es_only_indexes
