@@ -17,3 +17,9 @@ versions = versions
 setuptools = 9.1
 zc.buildout = 2.2.5
 zc.recipe.egg =
+amqp = 1.4.6
+anyjson = 0.3.3
+billiard = 3.3.0.20
+celery = 3.1.18
+elasticsearch = 2.3.0
+kombu = 3.0.26
