@@ -4,6 +4,9 @@ Changelog
 2.0.0a2 (2016-07-19)
 --------------------
 
+- The list of indexes that forces es search is configurable.
+  [thomasdesvenain]
+
 - Works under Plone 4.3
   [thomasdesvenain]
 
